--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title> Design Patterns TypeScript</title>
-  <script src="dist/builder.js" defer></script>
+  <script src="dist/singleton.js" defer></script>
 </head>
 <body>
 </body>
